--- a/web/menuUsuario.xhtml
+++ b/web/menuUsuario.xhtml
@@ -24,11 +24,15 @@
             <h:form>
             <h:commandLink action="#{loginBean.VerPerfil()}" style="font-size: 27px;color: #ffa812;">Meu Perfil</h:commandLink>
             </h:form>
+            <c:if test="#{loginBean.usuarioLogado.idPermissao != 3}">
             <a href="meusAnimais.jsf" style="font-size: 27px;color: #ffa812;">Meus Animais</a>
             <a href="meusEncontros.jsf" style="font-size: 27px;color: #ffa812;">Meus Encontros</a>
             <a href="meusEventos.jsf" style="font-size: 27px;color: #ffa812;">Meus Eventos</a>
-            <a href="meusAnuncios.jsf" style="font-size: 27px;color: #ffa812;">Meus Anúncios</a>
             <a href="minhasExperiencias.jsf" style="font-size: 27px;color: #ffa812;">Minhas Experiências</a>
+            </c:if>
+            <c:if test="#{loginBean.usuarioLogado.idPermissao == 3}">
+            <a href="meusAnuncios.jsf" style="font-size: 27px;color: #ffa812;">Meus Anúncios</a>
+            </c:if>
         </div>
     </div>
 
@@ -59,9 +63,9 @@
                     <ul class="nav navbar-nav navbar-right ">
                         <c:if test="#{loginBean.usuarioLogado != null}">
                             <li><a style="font-size:30px;cursor:pointer;color: #ffa812; font-size: 15px;" onclick="openNav()"> #{loginBean.usuarioLogado.nomeUsuario} </a></li>
-                            <h:form>
-                            <li><h:commandLink action="#{loginBean.Deslogar()}" style="color: #ffa812; font-size: 15px;">Sair</h:commandLink></li>
-                            </h:form>
+                            
+                            <li><h:form><h:commandLink action="#{loginBean.Deslogar()}" style="color: #ffa812; font-size: 15px;">Sair</h:commandLink></h:form></li>
+                            
                         </c:if>
                         <c:if test="#{loginBean.usuarioLogado == null}">
                             <li><a href="loginSignin.jsf" style="color: #ffa812; font-size: 15px;">Entrar</a></li>
