--- a/web/animais.xhtml
+++ b/web/animais.xhtml
@@ -87,9 +87,7 @@
         <br/>
         <br/>
         <br/>
-        <div id="locationField">// essa parte no lugar da localização
-            <input id="autocomplete" placeholder="Endereço" onFocus="geolocate()" type="text" />
-        </div>
+
         <br/>
         <br/>
         <!--<form id="mapa" class="mapa">
@@ -122,7 +120,12 @@
                     <c:forEach var="animal" items="#{animalBean.animaisTop}">
                         <div class="col-xs-18 col-sm-6 col-md-3">
                             <div class="thumbnail caixa">
-                                <img src="imagens/gato2.jpg" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
+                                <c:if test="#{animal.fotoAnimal != null}">
+                                    <h:graphicImage value="#{animal.fotoAnimal}" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
+                                </c:if>
+                                <c:if test="#{animal.fotoAnimal == null}">
+                                    <img src="imagens/gato2.jpg" alt="Foto da adoção" style="width:100%; height:170px; border-radius: 0px;"/>
+                                </c:if>
                                 <div class="caption" align="center">
                                     <h5>#{animal.nomeAnimal}</h5>
                                     <h:inputHidden value="#{animal.idAnimal}"/>
@@ -176,7 +179,7 @@
                                         <div class="card-header panel panel-default" style="margin-top: -5%; padding-top: 3%; background-color: white; border-radius: 0px; margin-bottom: 10px; color: black;">
 
                                             <!-- Form-->
-                                            <h:form class="form-signin">
+                                            <h:form class="form-signin" enctype="multipart/form-data">
 
                                                 <div class="row">
                                                     <div class="col-md-1">
@@ -235,13 +238,12 @@
                                                                 Local:
                                                             </label>
                                                             <div id="locationField">
-                                                                <h:inputText value="#{animalBean.animal.localizacao}" id="autocomplete" onfocus="geolocate()" />
+                                                                <h:inputText value="#{animalBean.animal.localizacao}" id="autocomplete" onfocus="geolocate()" class="form-control" style="font-size: 14px; color: black; margin-left: 10px;" />
                                                             </div>
-                                                            <h:inputText value="#{animalBean.animal.localizacao}" class="form-control" style="font-size: 14px; color: black; margin-left: 10px;"/>
                                                             <label style="font-size: 14px;color: black;padding-left: 10px;">
                                                                 Imagem:
                                                             </label>
-                                                            <h:inputText value="#{animalBean.animal.fotoAnimal}" class="form-control" style="font-size: 14px; color: black; margin-left: 10px;"/>
+                                                            <h:inputFile value="#{animalBean.imagem}" class="form-control" style="font-size: 14px; color: black; margin-left: 10px;"/>
                                                             <label style="font-size: 14px;color: black; padding-left: 10px;">
                                                                 Descrição:
                                                             </label>
