--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -42,13 +42,13 @@
             </ol>
             <div class="carousel-inner" role="listbox" >
                 <div class="item active" align="center">
-                    <img style="border-radius: 0px;height: 500px;" class="first-slide" aling="center" src="imagens/carrossel.jpg" alt="Banner"/>
+                    <img style="border-radius: 0px;height: 500px;" class="first-slide" aling="center" src="imagens/capa1.jpg" alt="Banner"/>
                 </div>
                 <div class="item" align="center">
-                    <img style="border-radius: 0px;height: 500px;" class="first-slide" aling="center" src="imagens/carrossel.jpg" alt="Banner"/>
+                    <img style="border-radius: 0px;height: 500px;" class="first-slide" aling="center" src="imagens/capa2.jpg" alt="Banner"/>
                 </div>
                 <div class="item" align="center">
-                    <img style="border-radius: 0px;height: 500px;" class="first-slide" aling="center" src="imagens/carrossel.jpg" alt="Banner"/>
+                    <img style="border-radius: 0px;height: 500px;" class="first-slide" aling="center" src="imagens/capa3.jpg" alt="Banner"/>
                 </div>
             </div>
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
