--- a/web/menuUsuario.xhtml
+++ b/web/menuUsuario.xhtml
@@ -20,7 +20,7 @@
         <a href="javascript:void(0)" class="closebtn fechar" onclick="closeNav()" style="color: #ffa812;">&times;</a>
 
         <div class="overlay-content user-menu" style="margin-top: -50px;">
-            <img src="imagens/foto.jpg" alt="Foto do usuário" class="circular"/>
+            <img src="imagens/userFoto.jpg" alt="Foto do usuário" class="circular"/>
             <h:form>
             <h:commandLink action="#{loginBean.VerPerfil()}" style="font-size: 27px;color: #ffa812;">Meu Perfil</h:commandLink>
             </h:form>
@@ -64,7 +64,7 @@
                         <c:if test="#{loginBean.usuarioLogado != null}">
                             <li><a style="font-size:30px;cursor:pointer;color: #ffa812; font-size: 15px;" onclick="openNav()"> #{loginBean.usuarioLogado.nomeUsuario} </a></li>
                             
-                            <li><h:form><h:commandLink action="#{loginBean.Deslogar()}" style="color: #ffa812; font-size: 15px;">Sair</h:commandLink></h:form></li>
+                            <li><h:form style="margin-top: 18px;"><h:commandLink action="#{loginBean.Deslogar()}" style="color: #ffa812; font-size: 15px; text-decoration: none;">Sair</h:commandLink></h:form></li>
                             
                         </c:if>
                         <c:if test="#{loginBean.usuarioLogado == null}">
@@ -206,7 +206,8 @@
                 font-size: 40px;
                 top: 15px;
                 right: 35px;
-            }     
+            } 
+        }
         </style>
 
     </html>
