Ajuste na modelagem e implementando o Confirmar Adoção

--- a/web/animais.xhtml
+++ b/web/animais.xhtml
@@ -209,7 +209,7 @@
                                                                 <f:selectItem itemLabel="6-12 meses" itemValue="6-12 meses"/>
                                                                 <f:selectItem itemLabel="1-2 anos" itemValue="1-2 anos"/>
                                                                 <f:selectItem itemLabel="2-5 anos" itemValue="2-5 anos"/>
-                                                                <f:selectItem itemLabel="Mais de 5 anos" itemValue="mais de 5 anos"/>
+                                                                <f:selectItem itemLabel="Mais de 5 anos" itemValue="5+ anos"/>
                                                             </h:selectOneMenu>
                                                             <label style="font-size: 14px;color: black; padding-left: 10px;">
                                                                 Sexo:
