--- a/web/anuncios.xhtml
+++ b/web/anuncios.xhtml
@@ -178,7 +178,7 @@
                                                                         </label>
                                                                     </div>
                                                                     <div class="col-md-8" >
-                                                                        <h:selectOneMenu value="#{anuncioBean.anuncio.tipoAnuncio}" class="form-control" style="height: 40px; color: black; " >
+                                                                        <h:selectOneMenu value="#{anuncioBean.anuncio.tipoAnuncio}" class="form-control" style="width: 75%; height: 40px; color: black; margin-left: 10px; " >
                                                                             <f:selectItem itemLabel="Banho/Tosa" itemValue="Banho/Tosa"/>
                                                                             <f:selectItem itemLabel="Brinquedo" itemValue="Brinquedo"/>
                                                                             <f:selectItem itemLabel="Consulta" itemValue="Consulta"/>
