--- a/web/perfilOng.xhtml
+++ b/web/perfilOng.xhtml
@@ -33,7 +33,7 @@
 
             </div>
             <div class="panel panel-default divPerfil" align="left">
-                <img src="imagens/ONG.jpg" style="position: relative; float: left;" alt="Imagem da ONG" class="fotoPerfil panel" />
+                <img src="imagens/userFoto.jpg" style="position: relative; float: left;" alt="Imagem da ONG" class="fotoPerfil panel" />
                 <div class="tituloNomeUsuario">
                     <h3 style="padding-top: 2%;">#{loginBean.usuarioLogado.nomeUsuario}</h3>
                 </div>
