--- a/web/meusAnimais.xhtml
+++ b/web/meusAnimais.xhtml
@@ -77,7 +77,13 @@
                                                         <div class="col-md-1">
                                                         </div>
                                                         <div class="col-md-5">
-                                                            <img src="imagens/gato2.jpg" alt="Foto do animal" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                            <c:if test="#{animal.fotoAnimal != null}">
+                                                                <h:graphicImage value="#{animal.fotoAnimal}" alt="Foto do animal" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                            </c:if>
+                                                            <c:if test="#{animal.fotoAnimal == null}">
+                                                                <img src="imagens/gato2.jpg" alt="Foto do animal" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                            </c:if>
+                                                            
                                                         </div>
                                                         <div class="col-md-5">
                                                             <div align="left">
