--- a/web/perfilClinica.xhtml
+++ b/web/perfilClinica.xhtml
@@ -34,7 +34,7 @@
 
             </div>
             <div class="panel panel-default divPerfil" align="left">
-                <img src="imagens/petshop.jpg"  style="position: relative; float: left;" alt="Imagem do usuário" class="fotoPerfil panel" />
+                <img src="imagens/userFoto.jpg"  style="position: relative; float: left;" alt="Imagem do usuário" class="fotoPerfil panel" />
                 <div class="tituloNomeUsuario">
                     <h3 style="padding-top: 2%;">#{loginBean.usuarioLogado.nomeUsuario}</h3>
                 </div>
